<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingRight="60dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/edit_activity_overview"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:inputType="text"
                android:hint="@string/edit_activity_new_title"/>

            <EditText
                android:id="@+id/activity_edit_values"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:inputType="number|none"
                android:hint="@string/edit_activity_new_value"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="0dp"
            android:paddingEnd="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/edit_activity_transaction"/>

        <RadioGroup
            android:id="@+id/activity_edit_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:checkedButton="@+id/activity_edit_income">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/activity_edit_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/edit_activity_choice_income"/>
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/activity_edit_outcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/edit_activity_choice_outcome"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingEnd="30dp"
            android:paddingStart="0dp"
            android:paddingTop="10dp"
            android:text="@string/edit_activity_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_edit_date"
                android:hint="YYYY-MM-DD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:inputType="date"
                android:focusable="false"
                android:longClickable="false"/>

            <EditText
                android:id="@+id/activity_edit_time"
                android:hint="HH:MM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:inputType="date"
                android:focusable="false"
                android:longClickable="false"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:paddingEnd="45dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:text="@string/edit_activity_new_description" />

        <EditText
            android:id="@+id/activity_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxHeight="290dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="3dp"
        android:text="@string/edit_activity_required"
        android:fontFamily="sans-serif-light"
        android:textAppearance="?android:textAppearanceSmall"
        android:gravity="end"/>

</LinearLayout>
